# browserpane

./: .gitignore  AGENTS.md  ARCH.md  ARCHITECTURE.mmd  CLAUDE.md  CODEX.md  Cargo.toml  ISSUE_6_MULTI_SESSION_PLAN.md  NEXT_EXECUTION_TARGET_HARDENING_PLAN.md  NODEJS_STANDARDS.md  PERFORMANCE_PLAN.md  README.md  REMOTE_DEPLOYMENT.md  RUST_STANDARDS.md
code/apps/bpane-gateway/: Cargo.toml
code/apps/bpane-gateway/migrations/: 20260429000100_control_plane_baseline.sql  20260504000100_session_file_bindings.sql  20260504000200_session_files.sql  20260518000100_session_runtime_release.sql  20260521000100_session_templates.sql  20260521000200_browser_contexts.sql  20260521000300_browser_context_retention.sql  20260521000400_browser_context_storage_quota.sql  20260521000500_network_identity_egress_profiles.sql  20260521000600_egress_traffic_observation.sql  20260522000100_egress_diagnostics_probe_results.sql  20260522000200_egress_profile_reachability_probe_results.sql  20260528000100_projects_admission.sql  20260529000100_service_principals.sql  20260531000100_identity_mappings.sql  20260531000200_workflow_run_project_binding.sql  20260604000100_project_policy_bindings.sql  20260604000200_project_usage_accounting.sql  20260604000300_project_durable_resources.sql  20260604000400_session_queue_metadata.sql  20260605000100_credential_binding_project_scope.sql  20260605000200_egress_profile_project_scope.sql
code/apps/bpane-gateway/src/: api.rs  app.rs  auth.rs  automation_task.rs  config.rs  connect_ticket.rs  credential_binding.rs  credential_provider.rs  idle_stop.rs  main.rs  recording_lifecycle.rs  recording_observability.rs  recording_playback.rs  recording_retention.rs  relay.rs  runtime_manager.rs  session_control.rs  session_hub.rs  session_manager.rs  session_registry.rs  transport.rs  workflow.rs  workflow_event_delivery.rs  workflow_lifecycle.rs  workflow_observability.rs  workflow_retention.rs  workflow_source.rs
code/apps/bpane-gateway/src/api/: admin_events.rs  authz.rs  automation_tasks.rs  browser_contexts.rs  credential_bindings.rs  egress_profiles.rs  errors.rs  extensions.rs  file_workspaces.rs  http_helpers.rs  identity.rs  identity_mappings.rs  projects.rs  recordings.rs  resources.rs  router.rs  runtime_access.rs  service_principals.rs  session_bindings.rs  session_files.rs  session_templates.rs  sessions.rs  tests.rs  types.rs  workflow_definitions.rs  workflow_events.rs  workflow_files.rs  workflow_run_operations.rs  workflows.rs
code/apps/bpane-gateway/src/app/: builders.rs  tests.rs
code/apps/bpane-gateway/src/auth/: hmac.rs  mod.rs  oidc.rs  tests.rs
code/apps/bpane-gateway/src/automation_tasks/: mod.rs  model.rs
code/apps/bpane-gateway/src/browser_contexts/: mod.rs  retention.rs
code/apps/bpane-gateway/src/config/: auth.rs  gateway.rs  mod.rs  recording.rs  runtime.rs  storage.rs  workflow.rs
code/apps/bpane-gateway/src/credentials/: binding.rs  mod.rs  provider.rs
code/apps/bpane-gateway/src/extensions/: mod.rs  model.rs
code/apps/bpane-gateway/src/recording/: artifact_store.rs  mod.rs  playback.rs  retention.rs
code/apps/bpane-gateway/src/recording_lifecycle/: control.rs  tests.rs  workers.rs
code/apps/bpane-gateway/src/relay/: tests.rs
code/apps/bpane-gateway/src/runtime_manager/: docker.rs  static_single.rs  tests.rs
code/apps/bpane-gateway/src/session_access/: automation.rs  connect.rs  mod.rs
code/apps/bpane-gateway/src/session_control/: extensions_store.rs  (+12 more)
code/apps/bpane-gateway/tests/: compose_api_surface.rs  compose_api_surface_docker_pool.rs  source_size_report.rs  start_host_browser_policy.rs  start_host_runtime_paths.rs
code/apps/bpane-host/: Cargo.toml  REFACTORING_PLAN.md
code/apps/bpane-host/src/: camera.rs  cdp_video.rs  clipboard.rs  cursor.rs  display.rs  filetransfer.rs  ipc.rs  main.rs  resize.rs  session.rs
code/shared/bpane-protocol/: Cargo.toml  PRODUCTION_HARDENING_PLAN.md
code/shared/bpane-protocol/src/: channel.rs  frame.rs  lib.rs  types.rs
code/shared/bpane-protocol/tests/: integration_test.rs  proptest_roundtrip.rs  wire_fixtures.rs
(+862 files in other folders)
