[package]
name = "bpane-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bpane-gateway"
path = "src/main.rs"

[dependencies]
bpane-protocol.workspace = true
bytes = "1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
wtransport = "0.7"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = { version = "9", features = ["use_pem"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
uuid = { version = "1", features = ["serde", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
zip = { version = "2", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
