[package]
name = "bpane-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bpane-host"
path = "src/main.rs"

[dependencies]
bpane-protocol.workspace = true
bytes = "1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
qoi = "0.4.1"
zstd = "0.13"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.24"
indexmap = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
audiopus = "0.3.0-rc.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xtest", "xfixes", "xkb", "damage", "composite", "shm"] }
libc = "0.2"
ffmpeg-next = { version = "7", optional = true }

[features]
default = []
libav = ["ffmpeg-next"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
